revisi bagian front end, ganti font jadi futura

--- a/Views/AwardCertificationPage.cshtml
+++ b/Views/AwardCertificationPage.cshtml
@@ -37,7 +37,7 @@
 					<div class="gambar"><img src="/images/penghargaan-pabrik.png"></div>
 					<div class="penghargaan-content">
 						<h3>@Model.AwardSubtitle</h3>
-						<p>@Model.AwardDescription</p>
+						@* <p>@Model.AwardDescription</p> *@
 					</div>
 					<i class="fa-solid fa-arrow-right"></i>
 				</div>
@@ -54,12 +54,13 @@
 			<a href="@Model.CertificationLink.Url">
 				<div class="penghargaan-card">
 					<div class="gambar">
-						<img src="/images/penghargaan-kilang.png" class="kilang-satu">
-						<img src="/images/penghargaan-kilang.png" class="kilang-dua">
+						<img src="/images/penghargaan-pabrik.png">
+						@* <img src="/images/penghargaan-kilang.png" class="kilang-satu"> *@
+						@* <img src="/images/penghargaan-kilang.png" class="kilang-dua"> *@
 					</div>
 					<div class="penghargaan-content">
 						<h3>@Model.CertificationSubtitle</h3>
-						<p>@Model.CertificationDescription</p>
+						@* <p>@Model.CertificationDescription</p> *@
 					</div>
 					<i class="fa-solid fa-arrow-right"></i>
 				</div>
