--- a/Views/HssePage.cshtml
+++ b/Views/HssePage.cshtml
@@ -28,7 +28,9 @@
 <div class="container rich-text-content">
     <img src="@Model.HsseContentImage.Url()" class="rich-float-left w-50">
     <h3>@Model.HsseContentTitle</h3>
-    <p>@Model.HsseContent</p>
+    <div>
+        <p>@Model.HsseContent</p>
+    </div>
 </div>
 
 
