--- a/Views/MediaInformationPage.cshtml
+++ b/Views/MediaInformationPage.cshtml
@@ -14,6 +14,9 @@
 	</div>
 </div>
 
+<div class="container headline-title">
+	<h2>Berita Terbaru</h2>
+</div>
 <div class="container beritapengumuman-headline">
 	@if (Model.Headline1Image != null)
 	{
