--- a/Views/OurProjectsPage.cshtml
+++ b/Views/OurProjectsPage.cshtml
@@ -25,16 +25,22 @@
 	</div>
 </div>
 
+<div class="container rich-text-content">
+	<h3>@Model.ProjectsLocationContentTitle</h3>
+	<p>@Model.ProjectsLocationContent</p>
+</div>
+
 <div class="container container-projects-image">
-    <div class="rich-text-content">
-        <h3>@Model.ProjectsLocationContentTitle</h3>
-        <p>@Model.ProjectsLocationContent</p>
-    </div>
 	<img class="project-location" src="@Model.ProjectsLocation.Url()">
 	<img src="@Model.ProjectsFeatures.Url()">
 </div>
 
+
 <div class="container">
+	<div class="rich-text-content">
+		<h3>@Model.ProdukLainnyaContentTitle</h3>
+		<p>@Model.ProdukLainnyaContent</p>
+	</div>
 	<div class="bbm">
 		<h2>@Model.BbmTitle</h2>
 		<div class="bbm-flex">
@@ -75,10 +81,6 @@
 				<h3>@Model.ProdukLainnyaTotalValue</h3>
 			</div>
 		</div>
-	</div>
-	<div class="rich-text-content">
-	    <h3>@Model.ProdukLainnyaContentTitle</h3>
-	    <p>@Model.ProdukLainnyaContent</p>
 	</div>
 </div>
 
