--- a/Views/Partials/listPengadaan.cshtml
+++ b/Views/Partials/listPengadaan.cshtml
@@ -5,28 +5,37 @@
 
     @{
         var selection = Umbraco.Content(Guid.Parse("f94cbf2f-4840-4b10-ad14-b19567f4ad36"))
-            .Children()
-            .Where(x => x.IsVisible())
-            .OrderByDescending(x => x.CreateDate);
+        .Children()
+        .Where(x => x.IsVisible())
+        .OrderByDescending(x => x.CreateDate);
     }
-    @foreach (var item in selection)
+
+    @if (selection != null)
     {
-        <div class="item" data-aos="fade-up">
-            @{
-                var image = item.Value<IPublishedContent>("NewsImage");
-            }
-            <div class="gambar">
-                <img src="@image.Url()">
+        foreach (var item in selection)
+        {
+            <div class="item" data-aos="fade-up">
+                @{
+                    var image = item.Value<IPublishedContent>("NewsImage");
+                }
+                <div class="gambar">
+                    <img src="@image.Url()">
+                </div>
+                <div class="konten">
+                    <h2>@item.Value("NewsTitle")</h2>
+                    <div class="pengadaan-konten-singkat">
+                        <p>@item.Value("PreviewContent")</p>
+                    </div>
+                    <a href="@item.Url()">
+                        <span>@Umbraco.GetDictionaryValue("lihat selengkapnya")</span>
+                        <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
             </div>
-            <div class="konten">
-                <h2>@item.Value("NewsTitle")</h2>
-				<div class="pengadaan-konten-singkat">
-				    <p>@item.Value("PreviewContent")</p>
-				</div>
-                <a href="@item.Url()">
-                    <span>@Umbraco.GetDictionaryValue("lihat selengkapnya")</span>
-                    <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-        </div>
+        }
+    }
+
+    @if (selection == null || !selection.Any())
+    {
+        <h3 class="text-center">Item Belum Tersedia Untuk Saat Ini</h3>
     }
 </div>
