--- a/Views/Partials/listPengadaanHorizontal.cshtml
+++ b/Views/Partials/listPengadaanHorizontal.cshtml
@@ -7,40 +7,40 @@
     <div class="pengadaan-slider swiper">
         <div class="berita-head">
             <img src="/images/vector-paper.svg">
-            <h2>@Umbraco.GetDictionaryValue("judul pengadaan")</h2>
+            <a href="/">
+                <h2>@Umbraco.GetDictionaryValue("judul pengadaan")</h2>
+            </a>
         </div>
         <div class="swiper-wrapper">
             
-@{
-	var selection = Umbraco.Content(Guid.Parse("f94cbf2f-4840-4b10-ad14-b19567f4ad36"))
-    .Children()
-    .Where(x => x.IsVisible())
-	.OrderByDescending(x => x.CreateDate);
-}
-	@foreach (var item in selection)
-	{
-		<div class="swiper-slide">
-            <a href="@item.Url()" class="slider-card-link">
-            @{var image = item.Value<IPublishedContent>("NewsImage");}
-                <div class="slider-card" style='background-image: url(@image.Url())'>
-                    <div class="slider-date">
-                        <h6>@(item.Value<DateTime>("NewsPostDate").ToString("dd - MM - yyyy"))</h6>
-                    </div>
-                    <div class="slider-content">
-                        <h3>@item.Value("NewsShortTitle")</h3>
-                            <span>@Umbraco.GetDictionaryValue("lihat selengkapnya")
-                                <i class="fa-solid fa-arrow-right"></i>
-                            </span>
-                    </div>
-                    <div class="bg-gradient-biru"></div>
+        @{
+            var selection = Umbraco.Content(Guid.Parse("f94cbf2f-4840-4b10-ad14-b19567f4ad36"))
+            .Children()
+            .Where(x => x.IsVisible())
+            .OrderByDescending(x => x.CreateDate);
+        }
+        @if(selection != null){
+            foreach (var item in selection)
+            {
+                <div class="swiper-slide">
+                    <a href="@item.Url()" class="slider-card-link">
+                    @{var image = item.Value<IPublishedContent>("NewsImage");}
+                        <div class="slider-card" style='background-image: url(@image.Url())'>
+                            <div class="slider-date">
+                                <h6>@(item.Value<DateTime>("NewsPostDate").ToString("dd - MM - yyyy"))</h6>
+                            </div>
+                            <div class="slider-content">
+                                <h3>@item.Value("NewsShortTitle")</h3>
+                                    <span>@Umbraco.GetDictionaryValue("lihat selengkapnya")
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </span>
+                            </div>
+                            <div class="bg-gradient-biru"></div>
+                        </div>
+                    </a>
                 </div>
-            </a>
-        </div>
-	}
-
-
-
-            
+            }
+        }       
         </div>
         <div>
             <img src="/images/tombol-kiri.svg" class="swiper-button-prev" style="--swiper-navigation-size: 100px">
@@ -48,5 +48,10 @@
         <div>
             <img src="/images/tombol-kanan.svg" class="swiper-button-next" style="--swiper-navigation-size: 100px">
         </div>
+
+        @if (selection == null || !selection.Any())
+        {
+            <h3 class="text-center">Item Belum Tersedia Untuk Saat Ini</h3>
+        }
     </div>
 </div>
