--- a/Views/MediaInformationPage.cshtml
+++ b/Views/MediaInformationPage.cshtml
@@ -15,7 +15,7 @@
 </div>
 
 <div class="container headline-title">
-	<h2>Berita Terbaru</h2>
+	<h2>@Model.HeadlineTitle</h2>
 </div>
 <div class="container beritapengumuman-headline">
 	@if (Model.Headline1Image != null)
