--- a/Views/AnnouncementItem.cshtml
+++ b/Views/AnnouncementItem.cshtml
@@ -8,8 +8,11 @@
 <div class="container-artikel container">
 	<div class="container-breadcrumb">
 		<a href="/"><img src="/images/vector-home.svg" class="breadcrumb-home"></a>
-		@* <div class="batas-breadcrumb"><i class="fa-solid fa-chevron-right"></i></div>
-			<a href="@Model.Parent.Url()" class="previous-breadcrumb">@Model.Parent.Name</a> *@
+		<div class="batas-breadcrumb"><i class="fa-solid fa-chevron-right"></i></div>
+		@if (Model.Parent != null)
+		{
+			<a href="@Model.Parent.Url()" class="previous-breadcrumb">@Model.Parent.Name</a>
+		}
 		<div class="batas-breadcrumb"><i class="fa-solid fa-chevron-right"></i></div>
 		<a href="@Model.Url()" class="currentpage-breadcrumb">@Model.NewsTitle</a>
 	</div>
@@ -34,6 +37,10 @@
 			</div>
 			<div class="artikel-konten">
 				<p>@Model.NewsRichTextContent</p>
+				@if(@Model.AnnouncementFile != null){
+					<a class="button-file" href="@Model.AnnouncementFile.Url()" download="">Download @Model.AnnouncementFile.Name
+					<i class="fa-solid fa-download"></i> </a>
+				}
 			</div>
 		</div>
 	</div>
