--- a/Views/Partials/listPengadaan.cshtml
+++ b/Views/Partials/listPengadaan.cshtml
@@ -24,7 +24,7 @@
                 <div class="konten">
                     <h2>@item.Value("NewsTitle")</h2>
                     <div class="pengadaan-konten-singkat">
-                        <p>@item.Value("PreviewContent")</p>
+                        <p>@item.Value("NewsContentPreview")</p>
                     </div>
                     <a href="@item.Url()">
                         <span>@Umbraco.GetDictionaryValue("lihat selengkapnya")</span>
@@ -36,6 +36,6 @@
 
     @if (selection == null || !selection.Any())
     {
-        <h3 class="text-center">Item Belum Tersedia Untuk Saat Ini</h3>
+        <h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong")</h3>
     }
 </div>
