--- a/Views/Partials/listPengumuman.cshtml
+++ b/Views/Partials/listPengumuman.cshtml
@@ -1,17 +1,22 @@
-@inherits Umbraco.Web.Mvc.UmbracoViewPage
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 @using Umbraco.Web;
+@using Umbraco.Web.Models;
+
 
 <div class="container slider-container ">
     <div class="pengumuman-slider swiper">
         <div class="berita-head">
             <img src="/images/vector-message.svg">
-            <a href="/">
-                <h2>@Umbraco.GetDictionaryValue("judul pengumuman")</h2>
-            </a>
+            @{
+                var link = Model.Value<Link>("linkToPengumuman");
+            }
+                <a href='@link.Url'>
+                    <h2>@Umbraco.GetDictionaryValue("judul pengumuman")</h2>
+                </a>
         </div>
         <div class="swiper-wrapper">
             @{
-                var selection = Umbraco.Content(Guid.Parse("9df6ac0e-aed6-46e7-a7e5-5b061ecb8da6"))
+                var selection = Umbraco.Content(Guid.Parse("a6ca9a44-f574-4aaa-b653-760f2e8b6401"))
                 .Children()
                 .Where(x => x.IsVisible())
                 .OrderByDescending(x => x.CreateDate);
@@ -51,7 +56,7 @@
 
         @if (selection == null || !selection.Any())
         {
-            <h3 class="text-center">Item Belum Tersedia Untuk Saat Ini</h3>
+            <h3 class="text-center">@Umbraco.GetDictionaryValue("item kosong")</h3>
         }
     </div>
 </div>
