--- a/Views/ProcurementsPage.cshtml
+++ b/Views/ProcurementsPage.cshtml
@@ -14,11 +14,13 @@
 	</div>
 </div>
 
-<div class="pengadaan-wrapper">
-	<div class="container rich-text-content">
-		<h4>@Model.PengadaanContentTitle</h4>
-		<p>@Model.PengadaanContentText</p>
-	</div>
-</div>
+@if(string.IsNullOrWhiteSpace(Model.PengadaanContentTitle) == false){
+    <div class="pengadaan-wrapper">
+    	<div class="container rich-text-content">
+    		<h4>@Model.PengadaanContentTitle</h4>
+    		<p>@Model.PengadaanContentText</p>
+    	</div>
+    </div>
+}
 
 @Html.Partial("~/Views/Partials/listPengadaan.cshtml")
