--- a/Views/Partials/listLaporan.cshtml
+++ b/Views/Partials/listLaporan.cshtml
@@ -8,11 +8,15 @@
         <div class="berita-head">
             <img src="/images/vector-network.svg">
             @{
-                var link = Model.Value<Link>("linkToLaporan");
-            }
-                <a href='@link.Url'>
+                if(Model.Value<Link>("linkToLaporan") != null){
+                    var link = Model.Value<Link>("linkTolaporan");
+                    <a href='@link.Url'>
+                        <h2>@Umbraco.GetDictionaryValue("judul laporan")</h2>
+                    </a>
+                }else{
                     <h2>@Umbraco.GetDictionaryValue("judul laporan")</h2>
-                </a>
+                }
+            }
         </div>
         <div class="swiper-wrapper">
 
