--- a/Views/ReportsPage.cshtml
+++ b/Views/ReportsPage.cshtml
@@ -4,24 +4,24 @@
 	Layout = "master.cshtml";
 }
 
-
 <div class="tentang-jumbotron">
-	<img src="@Model.HeroBackgroundImage.Url()" class="blueprint">
-
-	<div class="container content">
-		<h1>@Model.HeroTitle</h1>
-		@*<h2>@Model.HeroSubtitle</h2>*@
+	<div
+		style="background-image: url('@Model.HeroBackgroundImage.Url()'); background-size: cover; background-repeat: no-repeat; background-position: bottom;">
+		<div class="container content">
+			<h1>@Model.HeroTitle</h1>
+		</div>
 	</div>
 </div>
 
 
-@if(string.IsNullOrWhiteSpace(Model.LaporanContentTitle) == false){
+@if (string.IsNullOrWhiteSpace(Model.LaporanContentTitle) == false)
+{
 	<div class="pengadaan-wrapper">
 		<div class="container rich-text-content">
-			
+
 			<h4>@Model.LaporanContentTitle</h4>
 			<p>@Model.LaporanContentText</p>
-			
+
 		</div>
 	</div>
 }
