--- a/css/style35.css
+++ b/css/style35.css
@@ -2164,7 +2164,7 @@ a.coklat-prpp:hover{
 	font-size: 1.4vw;
 	/* line-height: 24px; */
 	letter-spacing: 0.02em;
-	text-transform: uppercase;
+	text-transform: capitalize;
 
 	color: var(--hijauPRPP);
 }
@@ -3258,7 +3258,7 @@ a.coklat-prpp:hover{
 }
 
 .sustainable-business-image img{
-	width: 80%;
+	width: 100%;
 	
 	margin: 0 auto;
 	
